[package]
name = "max2034x"
version = "0.1.2"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "Driver crate for the MAX20343/MAX20344 family of buck/boost converters."
readme = "README.md"
repository = "https://github.com/tweedegolf/max2034x"

license = "MIT OR Apache-2.0"
keywords = ["MAX20343", "MAX20344", "embedded", "buck-boost", "driver"]
categories = ["embedded", "no-std"]
exclude = ["Cargo.lock", ".gitignore"]

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
device-driver = "0.3.1"
num_enum = { version = "0.5.1", default_features = false }

[badges]
maintenance = { status = "passively-maintained" }
