[package]
name = "max2034x"
version = "0.1.3"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "Driver crate for the MAX20343/MAX20344 family of buck/boost converters."
readme = "README.md"
repository = "https://github.com/tweedegolf/max2034x"

license = "MIT OR Apache-2.0"
keywords = ["MAX20343", "MAX20344", "embedded", "buck-boost", "driver"]
categories = ["embedded", "no-std"]
exclude = ["Cargo.lock", ".gitignore"]

[dependencies]
embedded-hal02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"], optional = true }
embedded-hal1 = { package = "embedded-hal", version = "1.0.0-alpha.8", optional = true }
device-driver = "0.3.1"
num_enum = { version = "0.5.1", default_features = false }

[dev-dependencies]
embedded-hal-mock = { git = "https://github.com/tweedegolf/embedded-hal-mock", rev = "c813c91"}

[features]
default = ["eh-02"]
eh-02 = ["dep:embedded-hal02"]
eh-1 = ["dep:embedded-hal1"]

[badges]
maintenance = { status = "passively-maintained" }
